Added librastro and cmake modifications

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,14 +25,22 @@ SET(CMAKE_C_FLAGS "-Wall -Wunused -Wmissing-prototypes -Wmissing-declarations -W
 CONFIGURE_FILE("${poti_SOURCE_DIR}/include/poti_config.h.in" "${CMAKE_BINARY_DIR}/include/poti_config.h" ESCAPE_QUOTES @ONLY IMMEDIATE)
 
 
-SET(POTI_SRC src/poti.c src/poti_header.c src/poti_events.c)
-SET(POTI_HEADERS include/poti.h ${CMAKE_BINARY_DIR}/include/poti_config.h)
+SET(POTI_SRC src/poti.c src/poti_header.c src/poti_events.c src/poti_header_rastro.c )
+SET(POTI_HEADERS include/poti.h include/poti_header_rastro.h ${CMAKE_BINARY_DIR}/include/poti_config.h)
+
+
+ADD_SUBDIRECTORY(librastro)
 
 INCLUDE_DIRECTORIES(${poti_SOURCE_DIR}/include/)
 INCLUDE_DIRECTORIES(${poti_SOURCE_DIR}/src/)
 INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include/)
 
+INCLUDE_DIRECTORIES(${rastro_SOURCE_DIR}/include/)
+INCLUDE_DIRECTORIES(${rastro_SOURCE_DIR}/src/)
+
+TARGET_LINK_LIBRARIES(rastro)
 ADD_LIBRARY(poti SHARED ${POTI_SRC})
+
 SET_TARGET_PROPERTIES(
   poti
 PROPERTIES
@@ -54,6 +62,12 @@ INSTALL(FILES include/poti.h
 
 ADD_SUBDIRECTORY(examples)
 ADD_SUBDIRECTORY(pkgconfig)
+
+
+
+# Include directories (shared by everyone)
+
+
 
 INSTALL(TARGETS poti DESTINATION lib)
 INSTALL(FILES ${POTI_HEADERS} DESTINATION include)
