--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -13,10 +13,10 @@
 # You should have received a copy of the GNU Lesser Public License
 # along with Poti. If not, see <http://www.gnu.org/licenses/>.
 ADD_EXECUTABLE(main_example main_example.c)
-TARGET_LINK_LIBRARIES(main_example poti)
+TARGET_LINK_LIBRARIES(main_example poti rastro)
 
 ADD_EXECUTABLE(vite-1.2 vite-1.2.c)
-TARGET_LINK_LIBRARIES(vite-1.2 poti)
+TARGET_LINK_LIBRARIES(vite-1.2 poti rastro)
 
 ADD_EXECUTABLE(vite-svn vite-svn.c)
-TARGET_LINK_LIBRARIES(vite-svn poti)
+TARGET_LINK_LIBRARIES(vite-svn poti rastro)
