--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,7 @@ SET(POTI_APIVERSION 2)
 
 # The poti binary reader
 ADD_EXECUTABLE(poti_reader src/poti_reader.c)
-TARGET_LINK_LIBRARIES(poti_reader poti)
+TARGET_LINK_LIBRARIES(poti_reader poti rastro)
 
 INSTALL(TARGETS poti
   RUNTIME DESTINATION bin
