--- a/src/converter/CMakeLists.txt
+++ b/src/converter/CMakeLists.txt
@@ -15,40 +15,31 @@
 CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
 
 FIND_PACKAGE(FLEX REQUIRED)
-FIND_PACKAGE(pajeng)
 FIND_PACKAGE(BISON REQUIRED)
-if (pajeng_FOUND)
-  #include_directories(${pajeng_INCLUDE_DIRS})
-  target_link_libraries (helloworld ${BZIP2_LIBRARIES})
-endif (pajeng_FOUND)
+
 
 
 FLEX_TARGET(scanner scanner.l ${CMAKE_CURRENT_BINARY_DIR}/lexer.cc COMPILE_FLAGS "-F")
 BISON_TARGET(parser parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.cc VERBOSE parser.output)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
-#INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/src/libpaje)
 INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/src/converter/)
-
-
-
-
-
 INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/include/)
-#include_directories(${pajeng_INCLUDE_DIRS})
-#set(LIBS ${LIBS} ${pajeng_LIBRARIES})
+INCLUDE_DIRECTORIES(${PAJENG_INCLUDE_PATH})
 
 
-MESSAGE("${SOME_INCLUDES}")
 
-ADD_LIBRARY(pjflex_library
+ADD_LIBRARY(conversor_library
   ${FLEX_scanner_OUTPUTS}
   ${BISON_parser_OUTPUTS}
   PajeFlexReader.cc
   )
-ADD_EXECUTABLE(pjflex main.cc)
-SET_PROPERTY(TARGET pjflex PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+ADD_EXECUTABLE(conversor main.cc)
+SET_PROPERTY(TARGET conversor PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
-TARGET_LINK_LIBRARIES(pjflex pjflex_library)
-TARGET_LINK_LIBRARIES(pjflex ${pajeng_LIBRARIES})
-TARGET_LINK_LIBRARIES(pjflex_library ${FLEX_LIBRARIES})
-TARGET_LINK_LIBRARIES(pjflex_library ${pajeng_LIBRARIES})
+#INCLUDE_DIRECTORIES(${PAJENG_INCLUDE_PATH})
+#LINK_DIRECTORIES (${PAJENG_LIBRARY_PATH})
+
+TARGET_LINK_LIBRARIES(conversor conversor_library)
+TARGET_LINK_LIBRARIES(conversor ${PAJENG_LIBRARY_PATH}/libpaje.so)
+TARGET_LINK_LIBRARIES(conversor_library ${FLEX_LIBRARIES})
+TARGET_LINK_LIBRARIES(conversor_library ${PAJENG_LIBRARY_PATH}/libpaje.so)
