--- a/src/converter/CMakeLists.txt
+++ b/src/converter/CMakeLists.txt
@@ -25,12 +25,12 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/src/converter/)
 INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/include/)
 INCLUDE_DIRECTORIES(${PAJENG_INCLUDE_PATH})
-
-
+INCLUDE_DIRECTORIES(${poti_SOURCE_DIR}/include/)
 
 ADD_LIBRARY(conversor_library
   ${FLEX_scanner_OUTPUTS}
   ${BISON_parser_OUTPUTS}
+  ${${poti_SOURCE_DIR}/include/}
   PajeFlexReader.cc
   )
 ADD_EXECUTABLE(conversor main.cc)
@@ -38,7 +38,8 @@ SET_PROPERTY(TARGET conversor PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_D
 
 #INCLUDE_DIRECTORIES(${PAJENG_INCLUDE_PATH})
 #LINK_DIRECTORIES (${PAJENG_LIBRARY_PATH})
-
+TARGET_LINK_LIBRARIES(conversor poti)
+TARGET_LINK_LIBRARIES(conversor rastro)
 TARGET_LINK_LIBRARIES(conversor conversor_library)
 TARGET_LINK_LIBRARIES(conversor ${PAJENG_LIBRARY_PATH}/libpaje.so)
 TARGET_LINK_LIBRARIES(conversor_library ${FLEX_LIBRARIES})
