-Converter reading headers and events with fields defined in any order and changing them to fit the binary_poti format -poti initialization small modifications

--- a/src/converter/CMakeLists.txt
+++ b/src/converter/CMakeLists.txt
@@ -27,13 +27,14 @@ INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/src/converter/)
 INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/include/)
 INCLUDE_DIRECTORIES(${PAJENG_INCLUDE_PATH})
 INCLUDE_DIRECTORIES(${poti_SOURCE_DIR}/include/)
-
+MESSAGE ( "READ ${CMAKE_HOME_DIRECTORY}/src/converter/ and ${poti_SOURCE_DIR}/include/" )
 ADD_LIBRARY(conversor_library
   ${FLEX_scanner_OUTPUTS}
   ${BISON_parser_OUTPUTS}
   ${${poti_SOURCE_DIR}/include/}
-  
+  ${${CMAKE_HOME_DIRECTORY}/src/converter/}
   PajeFlexReader.cc
+  #conversor_structs.c
   )
 TARGET_LINK_LIBRARIES(conversor_library poti)
 TARGET_LINK_LIBRARIES(conversor_library rastro)
