--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,8 @@ FIND_PACKAGE(librastro REQUIRED)
 
 INCLUDE_DIRECTORIES(${PAJENG_INCLUDE_PATH})
 LINK_DIRECTORIES (${PAJENG_LIBRARY_PATH})
+INCLUDE_DIRECTORIES(${LIBRASTRO_INCLUDE_PATH})
+LINK_DIRECTORIES (${LIBRASTRO_LIBRARY_PATH})
 
 #INCLUDE_DIRECTORIES(${poti_SOURCE_DIR}/src/converter/)
 INCLUDE_DIRECTORIES(${poti_SOURCE_DIR}/include/)
