--- a/src/converter/CMakeLists.txt
+++ b/src/converter/CMakeLists.txt
@@ -1,17 +1,17 @@
-# This file is part of PajeNG
+# This file is part of Poti
 #
-# PajeNG is free software: you can redistribute it and/or modify it
+# Poti is free software: you can redistribute it and/or modify it
 # under the terms of the GNU Public License as published by
 # the Free Software Foundation, either version 3 of the License, or
 # (at your option) any later version.
 #
-# PajeNG is distributed in the hope that it will be useful,
+# Poti is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU Public License for more details.
 #
 # You should have received a copy of the GNU Public License
-# along with PajeNG. If not, see <http://www.gnu.org/licenses/>.
+# along with Poti. If not, see <http://www.gnu.org/licenses/>.
 CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
 
 FIND_PACKAGE(FLEX REQUIRED)
