--- a/src/paje2rst/CMakeLists.txt
+++ b/src/paje2rst/CMakeLists.txt
@@ -25,7 +25,7 @@ FLEX_TARGET(scanner scanner.l ${CMAKE_CURRENT_BINARY_DIR}/lexer.c COMPILE_FLAGS 
 BISON_TARGET(parser parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.c VERBOSE parser.output)
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
-INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/src/converter)
+INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/src/paje2rst)
 INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/include)
 INCLUDE_DIRECTORIES(${PAJENG_INCLUDE_PATH})
 
