binaries should be on directory of compilation

--- a/src/paje2rst/CMakeLists.txt
+++ b/src/paje2rst/CMakeLists.txt
@@ -37,3 +37,4 @@ ADD_EXECUTABLE(paje2rst
   conversor_structs.c
   )
 TARGET_LINK_LIBRARIES(paje2rst poti rastro ${FLEX_LIBRARIES})
+SET_PROPERTY(TARGET paje2rst PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
